fix some UI alignment issue on iPad 3/4

--- a/src/main/webapp/css/fund-transfer.css
+++ b/src/main/webapp/css/fund-transfer.css
@@ -321,7 +321,7 @@ label {
 
 .view-code-button-wrapper {
     border: 0px solid #000;
-    top: 50%;
+    top: 40%;
     position: fixed;
     left: 0;
     z-index: 500;
